objects/VisitOps__Account_Opportunity_Grid_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Display_on_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Search Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Field_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Copy and paste the API name of the field.</inlineHelpText>
        <label>Field Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Field_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Object__c</fullName>
        <inlineHelpText>Please select the respective object for this field.</inlineHelpText>
        <label>Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account &amp; Opportunity Grid Configuration</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Field_Name__c</columns>
        <columns>VisitOps__Field_Type__c</columns>
        <columns>VisitOps__Object__c</columns>
        <columns>VisitOps__Display_on_Search__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>VisitOps__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account &amp; Opportunity Grid Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>